Lab1/Code/syntax.output
State 28 conflicts: 2 shift/reduce
State 33 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 99 conflicts: 13 reduce/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec LC CompSt
    8       | Specifier FunDec CompSt RC

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | error VarDec

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error Exp RB
   22       | VarDec LB RB

   23 FunDec: ID LP ParamList RP
   24       | ID LP RP
   25       | error FunDec

   26 ParamList: ParamDec COMMA ParamList
   27          | ParamDec
   28          | error ParamList

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | error CompSt

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error Stmt
   41     | Exp error

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | error Def

   46 DecList: Dec
   47        | Dec COMMA DecList
   48        | error DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | ID LP error SEMI
   65    | Exp LB Exp RB
   66    | Exp LB RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

    $end (0) 0
    FLOAT <type_float> (1) 70
    ID <type_str> (2) 16 18 19 23 24 62 63 64 67 68
    SEMI (3) 4 5 34 36 44 64
    COMMA (4) 10 26 47 71
    ASSIGNOP (5) 50 51
    RELOP (6) 54
    PLUS (7) 55
    MINUS (8) 56 60
    STAR (9) 57
    DIV (10) 58
    AND (11) 52
    OR (12) 53
    DOT (13) 67
    NOT (14) 61
    TYPE <type_bool> (15) 12
    LP (16) 23 24 37 38 39 59 62 63 64
    RP (17) 23 24 37 38 39 59 62 63
    LB (18) 20 21 22 65 66
    RB (19) 20 21 22 65 66
    LC (20) 7 14 30
    RC (21) 8 14 30
    STRUCT (22) 14 15
    RETURN (23) 36
    IF (24) 37 38
    ELSE (25) 38
    WHILE (26) 39
    INT <type_int> (200) 20 69
    error (256) 11 21 25 28 31 40 41 45 48 64
    UMINUS (258)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_syn> (32)
        on left: 1
        on right: 0
    ExtDefList <type_syn> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <type_syn> (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <type_syn> (35)
        on left: 9 10 11
        on right: 4 10
    Specifier <type_syn> (36)
        on left: 12 13
        on right: 4 5 6 7 8 29 44
    StructSpecifier <type_syn> (37)
        on left: 14 15
        on right: 13
    OptTag <type_syn> (38)
        on left: 16 17
        on right: 14
    Tag <type_syn> (39)
        on left: 18
        on right: 15
    VarDec <type_syn> (40)
        on left: 19 20 21 22
        on right: 9 10 11 20 21 22 29 49 50
    FunDec <type_syn> (41)
        on left: 23 24 25
        on right: 6 7 8 25
    ParamList <type_syn> (42)
        on left: 26 27 28
        on right: 23 26 28
    ParamDec <type_syn> (43)
        on left: 29
        on right: 26 27
    CompSt <type_syn> (44)
        on left: 30 31
        on right: 6 7 8 31 35
    StmtList <type_syn> (45)
        on left: 32 33
        on right: 30 32
    Stmt <type_syn> (46)
        on left: 34 35 36 37 38 39 40 41
        on right: 32 37 38 39 40
    DefList <type_syn> (47)
        on left: 42 43
        on right: 14 30 42
    Def <type_syn> (48)
        on left: 44 45
        on right: 42 45
    DecList <type_syn> (49)
        on left: 46 47 48
        on right: 44 47 48
    Dec <type_syn> (50)
        on left: 49 50
        on right: 46 47
    Exp <type_syn> (51)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 21 34 36 37 38 39 41 50 51 52 53 54 55 56 57 58 59 60 61 65 66 67 71 72
    Args <type_syn> (52)
        on left: 71 72
        on right: 62 71


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec LC CompSt
    8       | Specifier . FunDec CompSt RC

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   11 ExtDecList: error . VarDec
   25 FunDec: error . FunDec

    error  shift, and go to state 20
    ID     shift, and go to state 14

    VarDec  go to state 21
    FunDec  go to state 22


State 14

   19 VarDec: ID .
   23 FunDec: ID . LP ParamList RP
   24       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error Exp RB
   22       | VarDec . LB RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . LC CompSt
    8       | Specifier FunDec . CompSt RC

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 19

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 32
    Def              go to state 33


State 20

   25 FunDec: error . FunDec

    error  shift, and go to state 20
    ID     shift, and go to state 34

    FunDec  go to state 22


State 21

   11 ExtDecList: error VarDec .
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error Exp RB
   22       | VarDec . LB RB

    LB  shift, and go to state 26

    $default  reduce using rule 11 (ExtDecList)


State 22

   25 FunDec: error FunDec .

    $default  reduce using rule 25 (FunDec)


State 23

   23 FunDec: ID LP . ParamList RP
   24       | ID LP . RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 7
    ParamList        go to state 38
    ParamDec         go to state 39


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 40
    ID     shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 17


State 26

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error Exp RB
   22       | VarDec LB . RB

    error  shift, and go to state 43
    INT    shift, and go to state 44
    RB     shift, and go to state 45


State 27

   31 CompSt: error . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 46

    CompSt  go to state 47


State 28

    7 ExtDef: Specifier FunDec LC . CompSt
   30 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 48
    TYPE    shift, and go to state 1
    LC      shift, and go to state 46
    STRUCT  shift, and go to state 2

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    LC      [reduce using rule 43 (DefList)]
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    CompSt           go to state 49
    DefList          go to state 50
    Def              go to state 33


State 29

    6 ExtDef: Specifier FunDec CompSt .
    8       | Specifier FunDec CompSt . RC

    RC  shift, and go to state 51

    $default  reduce using rule 6 (ExtDef)


State 30

   45 Def: error . Def

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    Def              go to state 52


State 31

   44 Def: Specifier . DecList SEMI

    error  shift, and go to state 53
    ID     shift, and go to state 41

    VarDec   go to state 54
    DecList  go to state 55
    Dec      go to state 56


State 32

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 57


State 33

   42 DefList: Def . DefList

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 58
    Def              go to state 33


State 34

   23 FunDec: ID . LP ParamList RP
   24       | ID . LP RP

    LP  shift, and go to state 23


State 35

   28 ParamList: error . ParamList

    error   shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    ParamList        go to state 59
    ParamDec         go to state 39


State 36

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 37

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 60


State 38

   23 FunDec: ID LP ParamList . RP

    RP  shift, and go to state 61


State 39

   26 ParamList: ParamDec . COMMA ParamList
   27          | ParamDec .

    COMMA  shift, and go to state 62

    $default  reduce using rule 27 (ParamList)


State 40

   11 ExtDecList: error . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 21


State 41

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 43

   21 VarDec: VarDec LB error . Exp RB

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 69


State 44

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 70


State 45

   22 VarDec: VarDec LB RB .

    $default  reduce using rule 22 (VarDec)


State 46

   30 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 50
    Def              go to state 33


State 47

   31 CompSt: error CompSt .

    $default  reduce using rule 31 (CompSt)


State 48

   31 CompSt: error . CompSt
   45 Def: error . Def

    error   shift, and go to state 48
    TYPE    shift, and go to state 1
    LC      shift, and go to state 46
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    CompSt           go to state 47
    Def              go to state 52


State 49

    7 ExtDef: Specifier FunDec LC CompSt .

    $default  reduce using rule 7 (ExtDef)


State 50

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 71
    INT     shift, and go to state 63
    FLOAT   shift, and go to state 64
    ID      shift, and go to state 65
    LC      shift, and go to state 46
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 75
    StmtList  go to state 76
    Stmt      go to state 77
    Exp       go to state 78


State 51

    8 ExtDef: Specifier FunDec CompSt RC .

    $default  reduce using rule 8 (ExtDef)


State 52

   45 Def: error Def .

    $default  reduce using rule 45 (Def)


State 53

   48 DecList: error . DecList

    error  shift, and go to state 53
    ID     shift, and go to state 41

    VarDec   go to state 54
    DecList  go to state 79
    Dec      go to state 56


State 54

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error Exp RB
   22       | VarDec . LB RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 80
    LB        shift, and go to state 26

    $default  reduce using rule 49 (Dec)


State 55

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 81


State 56

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 82

    $default  reduce using rule 46 (DecList)


State 57

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 58

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 59

   28 ParamList: error ParamList .

    $default  reduce using rule 28 (ParamList)


State 60

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error Exp RB
   22       | VarDec . LB RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 29 (ParamDec)


State 61

   23 FunDec: ID LP ParamList RP .

    $default  reduce using rule 23 (FunDec)


State 62

   26 ParamList: ParamDec COMMA . ParamList

    error   shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    ParamList        go to state 83
    ParamDec         go to state 39


State 63

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 64

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 65

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   64    | ID . LP error SEMI
   68    | ID .

    LP  shift, and go to state 84

    $default  reduce using rule 68 (Exp)


State 66

   60 Exp: MINUS . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 85


State 67

   61 Exp: NOT . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 86


State 68

   59 Exp: LP . Exp RP

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 87


State 69

   21 VarDec: VarDec LB error Exp . RB
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    LB        shift, and go to state 96
    RB        shift, and go to state 97
    DOT       shift, and go to state 98


State 70

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 71

   31 CompSt: error . CompSt
   40 Stmt: error . Stmt

    error   shift, and go to state 71
    INT     shift, and go to state 63
    FLOAT   shift, and go to state 64
    ID      shift, and go to state 65
    LC      shift, and go to state 46
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    CompSt  go to state 99
    Stmt    go to state 100
    Exp     go to state 78


State 72

   36 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 101


State 73

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 102


State 74

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 103


State 75

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 76

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 104


State 77

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 71
    INT     shift, and go to state 63
    FLOAT   shift, and go to state 64
    ID      shift, and go to state 65
    LC      shift, and go to state 46
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 75
    StmtList  go to state 105
    Stmt      go to state 77
    Exp       go to state 78


State 78

   34 Stmt: Exp . SEMI
   41     | Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    error     shift, and go to state 106
    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    LB        shift, and go to state 96
    DOT       shift, and go to state 98


State 79

   48 DecList: error DecList .

    $default  reduce using rule 48 (DecList)


State 80

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 108


State 81

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 82

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 53
    ID     shift, and go to state 41

    VarDec   go to state 54
    DecList  go to state 109
    Dec      go to state 56


State 83

   26 ParamList: ParamDec COMMA ParamList .

    $default  reduce using rule 26 (ParamList)


State 84

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   64    | ID LP . error SEMI

    error  shift, and go to state 110
    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RP     shift, and go to state 111

    Exp   go to state 112
    Args  go to state 113


State 85

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    LB   shift, and go to state 96
    DOT  shift, and go to state 98

    $default  reduce using rule 60 (Exp)


State 86

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    LB   shift, and go to state 96
    DOT  shift, and go to state 98

    $default  reduce using rule 61 (Exp)


State 87

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    RP        shift, and go to state 114
    LB        shift, and go to state 96
    DOT       shift, and go to state 98


State 88

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 115


State 89

   53 Exp: Exp OR . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 116


State 90

   52 Exp: Exp AND . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 117


State 91

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 118


State 92

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 119


State 93

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 120


State 94

   57 Exp: Exp STAR . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 121


State 95

   58 Exp: Exp DIV . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 122


State 96

   65 Exp: Exp LB . Exp RB
   66    | Exp LB . RB

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RB     shift, and go to state 123

    Exp  go to state 124


State 97

   21 VarDec: VarDec LB error Exp RB .

    $default  reduce using rule 21 (VarDec)


State 98

   67 Exp: Exp DOT . ID

    ID  shift, and go to state 125


State 99

   31 CompSt: error CompSt .
   35 Stmt: CompSt .

    error     reduce using rule 31 (CompSt)
    error     [reduce using rule 35 (Stmt)]
    INT       reduce using rule 31 (CompSt)
    INT       [reduce using rule 35 (Stmt)]
    FLOAT     reduce using rule 31 (CompSt)
    FLOAT     [reduce using rule 35 (Stmt)]
    ID        reduce using rule 31 (CompSt)
    ID        [reduce using rule 35 (Stmt)]
    LC        reduce using rule 31 (CompSt)
    LC        [reduce using rule 35 (Stmt)]
    RC        reduce using rule 31 (CompSt)
    RC        [reduce using rule 35 (Stmt)]
    RETURN    reduce using rule 31 (CompSt)
    RETURN    [reduce using rule 35 (Stmt)]
    IF        reduce using rule 31 (CompSt)
    IF        [reduce using rule 35 (Stmt)]
    ELSE      reduce using rule 31 (CompSt)
    ELSE      [reduce using rule 35 (Stmt)]
    WHILE     reduce using rule 31 (CompSt)
    WHILE     [reduce using rule 35 (Stmt)]
    MINUS     reduce using rule 31 (CompSt)
    MINUS     [reduce using rule 35 (Stmt)]
    NOT       reduce using rule 31 (CompSt)
    NOT       [reduce using rule 35 (Stmt)]
    LP        reduce using rule 31 (CompSt)
    LP        [reduce using rule 35 (Stmt)]
    $default  reduce using rule 31 (CompSt)


State 100

   40 Stmt: error Stmt .

    $default  reduce using rule 40 (Stmt)


State 101

   36 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID

    SEMI      shift, and go to state 126
    ASSIGNOP  shift, and go to state 88
    OR        shift, and go to state 89
    AND       shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    LB        shift, and go to state 96
    DOT       shift, and go to state 98


State 102

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 127


State 103

   39 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 128


State 104

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 105

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 106

   41 Stmt: Exp error .

    $default  reduce using rule 41 (Stmt)


State 107

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 108

   50 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . LB RB
   67    | Exp . DOT ID
